--- a/Jeu2Des/Jeu2Des.csproj
+++ b/Jeu2Des/Jeu2Des.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ClassementXml.cs" />
     <Compile Include="De.cs" />
     <Compile Include="Entree.cs" />
+    <Compile Include="Factory.cs" />
     <Compile Include="Jeu.cs" />
     <Compile Include="Joueur.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
